<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/request_info"
        android:textAlignment="center"
        android:textColor="@color/grey_900"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <ImageView
            android:id="@+id/restaurant_info_restaurant_picture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:padding="5dp"
            android:src="@drawable/ic_store"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/request_info_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/restaurant_placeholder_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/request_info_restaurant_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/restaurant_placeholder_address"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/request_info_restaurant_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_placeholder_number"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/request_info_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_placeholder_cost"
            android:textAlignment="center"
            android:textColor="@color/orange_700"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/request_info_status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_placeholder_status"
            android:textAlignment="center"
            android:textColor="@color/orange_700"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        />

    <TextView
        android:id="@+id/request_info_no_reserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Your request has not been claimed yet"
        android:textColor="@color/red_700"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/request_info_requester_profile_picture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/light_blue_200"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:id="@+id/request_info_rating_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/request_info_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_rating"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            />

        <ImageView
            android:id="@+id/request_info_reserver_rating_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/request_info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/placeholder_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/request_info_party_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/placeholder_number_in_party"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/request_info_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/placeholder_time"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/request_info_button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red_400"
            android:text="@string/cancel"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/request_info_button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_400"
            android:text="@string/claim"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/request_info_button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green_400"
            android:text="@string/complete"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>