<resources>
    <string name="app_name">DineSum</string>
    <!--<string name="facebook_app_id">141415479828767</string>-->
    <string name="facebook_app_id">411991952549272</string>
    <!--<string name="fb_login_protocol_scheme">fb141415479828767</string>-->
    <string name="fb_login_protocol_scheme">fb411991952549272</string>
    <string name="google_places_api_key">AIzaSyCAUELvw1Eb4bodtlC8iWqc6mwIQdcesnI</string>

    <string name="menu_requester">Requests Sent</string>
    <string name="menu_acceptor">Requests Claimed</string>
    <string name="menu_home">Nearby Requests</string>
    <string name="menu_add">New Request</string>

    <string name="request_info">Request Information</string>
    <string name="restaurant_placeholder_name">Restaurant Name</string>
    <string name="restaurant_placeholder_address">123 Westwood Blvd\nLos Angeles, CA 90024</string>
    <string name="restaurant_placeholder_number">+1 310-555-5678</string>
    <string name="restaurant_placeholder_cost">$5</string>
    <string name="restaurant_placeholder_status">Pending</string>
    <string name="placeholder_name">John Doe</string>
    <string name="placeholder_rating">50</string>
    <string name="placeholder_number_in_party">5</string>
    <string name="placeholder_time">17:00 - 17:30</string>
    <string name="x_people">%1$d people</string>
    <string name="cancel">Cancel</string>
    <string name="claim">Claim</string>
    <string name="complete">Complete</string>
    <string name="remove_request">Remove Request</string>
    <string name="unclaim_request">Unclaim Request</string>
    <string name="mark_as_pending">Mark As Pending</string>
    <string name="mark_as_paid">Mark As Paid</string>

    <string name="party_of">Party of</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_launch">LaunchActivity</string>
</resources>
